# rules_rust

./: CONTRIBUTING.md  MODULE.bazel  cargo.html  crate_universe.html  crate_universe_bzlmod.html  crate_universe_workspace.html  external_crates.html  flatten.html  index.html  print.html  rules.html  rust.html  rust_analyzer.html  rust_bindgen.html  rust_bzlmod.html  rust_clippy.html  rust_doc.html  rust_fmt.html  rust_proto.html  rust_repositories.html  rust_settings.html  rust_toolchains.html  rust_wasm_bindgen.html  searchindex.js  searchindex.json  toc.html  toc.js  upstream_tooling.html  version.bzl
.bazelci/: presubmit.yml
.github/workflows/: publish.yaml  release.yaml  release_prep.sh
cargo/private/: cargo_bootstrap.bzl  cargo_build_script.bzl  cargo_build_script_wrapper.bzl  cargo_dep_env.bzl
cargo/private/cargo_build_script_runner/: bin.rs  cargo_manifest_dir.rs  lib.rs
cargo/settings/: BUILD.bazel  settings.bzl
cargo/tests/cargo_build_script/cc_args_and_env/: BUILD.bazel  cc_args_and_env_test.bzl
cargo/tests/cargo_build_script/emit_warnings/: BUILD.bazel  build.rs  test_lib.rs
cargo/tests/cargo_build_script/runfiles/: BUILD.bazel  build.rs  test.rs
cargo/tests/dep_env/: BUILD.bazel  read_out_dir.rs  set_out_dir.rs
crate_universe/: BUILD.bazel  Cargo.toml  defs.bzl  extension.bzl  extensions.bzl
crate_universe/private/: common_utils.bzl  crate.bzl  crates_repository.bzl  crates_vendor.bzl  generate_utils.bzl  local_crate_mirror.bzl  srcs.bzl
crate_universe/src/: config.rs  context.rs  lockfile.rs  rendering.rs  utils.rs
crate_universe/src/cli/: generate.rs  query.rs  splice.rs  vendor.rs
crate_universe/src/config/: label_injection.rs
crate_universe/src/context/: crate_context.rs
crate_universe/src/rendering/: template_engine.rs
crate_universe/src/splicing/: splicer.rs
crate_universe/src/utils/: starlark.rs
crate_universe/tests/integration/cargo_aliases/: BUILD.bazel  MODULE.bazel  cargo-bazel-lock.json
crate_universe/tests/integration/cargo_local/: BUILD.bazel  MODULE.bazel  transitive_module_extension_test.rs
crate_universe/tests/integration/complicated_dependencies/: BUILD.bazel  MODULE.bazel  cargo-bazel-lock.json
crate_universe/tests/integration/complicated_dependencies/src/: main.rs
crate_universe/tests/integration/ext_annotations/: BUILD.bazel  MODULE.bazel  cargo-bazel-lock.json  cxxbridge-cmd.cargo-bazel-lock.json
crate_universe/tests/integration/ext_annotations/src/: blobstore.cc  main.rs
docs/: BUILD.bazel  MODULE.bazel  rust_fmt.vm
docs/src/: index.md  rust_analyzer.md
examples/all_deps_vendor/: README.md
examples/cross_compile/tools/: BUILD.bazel
examples/cross_compile_llvm/: BUILD.bazel  README.md
examples/cross_compile_nix/rust_binary/: BUILD.bazel
examples/ffi/: README.md
examples/hello_world/: BUILD.bazel
examples/hello_world_no_cargo/: BUILD.bazel
examples/ios_build/: BUILD.bazel
examples/override_target/: BUILD.bazel
examples/proto/: README.md
examples/proto/grpc_client/: BUILD.bazel
examples/proto/grpc_server/: BUILD.bazel
extensions/bindgen/private/: bindgen.bzl  internal_extensions.bzl  llvm_utils.bzl
extensions/bindgen/test/: bindgen_test.bzl
extensions/bindgen/test/integration/: BUILD.bazel  main_std_headers.rs
extensions/bindgen/test/integration/std_headers/: BUILD.bazel  std_headers.cc  std_headers.h
extensions/mdbook/private/: internal_extensions.bzl  mdbook.bzl  server.rs  toolchain.bzl
extensions/prost/: defs.bzl
extensions/prost/private/: internal_extensions.bzl
extensions/pyo3/: MODULE.bazel  README.md
extensions/pyo3/private/: pyo3.bzl
extensions/pyo3/settings/: BUILD.bazel
extensions/wasm_bindgen/: .bazelrc  MODULE.bazel  extensions.bzl  repositories.bzl
extensions/wasm_bindgen/private/: internal_extensions.bzl  wasm_bindgen.bzl  wasm_bindgen_test.bzl
rust/: extensions.bzl  rust_analyzer_toolchain.bzl  rust_common.bzl  rust_stdlib_filegroup.bzl  rust_toolchain.bzl  rustfmt_toolchain.bzl  toolchain.bzl
rust/private/: BUILD.bazel  clippy.bzl  common.bzl  nightly_versions.bzl  pic_utils.bzl  repositories.bzl  repository_utils.bzl  rust.bzl  rust_analyzer.bzl  rustc.bzl  rustdoc.bzl  rustdoc_test.bzl  rustfmt.bzl  semver.bzl  toolchain.bzl  unpretty.bzl  utils.bzl
rust/private/rustdoc/: BUILD.bazel  rustdoc_compile_wrapper.rs  rustdoc_test_runner.rs
rust/runfiles/: runfiles.rs
rust/settings/: BUILD.bazel  settings.bzl
rust/toolchain/channel/: BUILD.bazel  channel.bzl
test/: test_extensions.bzl
test/generated_inputs/: external_repo.bzl  main.rs
test/integration/unstable_rust_features/: BUILD.bazel  hello.rs  self_profile_provider.bzl  validate.rs
test/rust_analyzer/: BUILD.bazel  flycheck_clippy_test_runner.sh  partial_failure_test_runner.sh
test/rust_analyzer/aspect_traversal_test/: rust_project_json_test.rs
test/rust_analyzer/auto_discovery_static_and_shared_lib_test/: auto_discovery_json_test.rs  greeter.rs
test/rust_analyzer/generated_srcs_test/: rust_project_json_test.rs
test/rust_analyzer/merging_crates_test/: rust_project_json_test.rs
test/rust_analyzer/proc_macro_dylib_test/: BUILD.bazel  proc_macro_dylib_test.bzl  test_proc_macro.rs
test/rust_analyzer/static_and_shared_lib_test/: rust_project_json_test.rs
test/rustfmt/: test_rustfmt.toml
test/unit/: common.bzl
test/unit/link_deps/: BUILD.bazel  c_lib.c  link_deps_test.bzl  main.rs
test/unit/rustdoc/: rustdoc.cc  (+4 more)
tools/rust_analyzer/: BUILD.bazel  aquery.rs  bep.rs  cache.rs  env_file.bzl  lib.rs  opt_transition.bzl  rust_project.rs  user_config.rs
tools/rust_analyzer/data/: launcher_discover_bazel_rust_project.bat  launcher_discover_bazel_rust_project.sh  launcher_flycheck.bat  launcher_flycheck.sh  launcher_rust_analyzer.bat  launcher_rust_analyzer.sh  launcher_rust_analyzer_proc_macro_srv.bat  launcher_rust_analyzer_proc_macro_srv.sh  launcher_rustfmt.bat  launcher_rustfmt.sh
util/: repin_all.sh
util/fetch_shas/: fetch_shas_NIGHTLY_ISO_DATES.txt  fetch_shas_VERSIONS.txt
util/process_wrapper/: options.rs
wasm_bindgen/private/: wasm_bindgen.bzl
(+58 files in other folders)
