load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

sh_binary(
    name = "rust_analyzer_test",
    srcs = ["rust_analyzer_test_runner.sh"],
    args = [package_name()],
)

sh_binary(
    name = "partial_failure_test",
    srcs = ["partial_failure_test_runner.sh"],
)

sh_binary(
    name = "flycheck_clippy_test",
    srcs = ["flycheck_clippy_test_runner.sh"],
)
