load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//rust:defs.bzl", "rust_binary", "rust_clippy", "rust_library", "rust_test")
load("//tools/private:tool_utils.bzl", "aspect_repository")
load(":env_file.bzl", "env_file")
load(":opt_transition.bzl", "opt_executable")

rust_binary(
    name = "discover_bazel_rust_project",
    srcs = ["bin/discover_rust_project.rs"],
    edition = "2018",
    rustc_env = {
        "ASPECT_REPOSITORY": aspect_repository(),
    },
    visibility = ["//visibility:public"],
    deps = [
        ":gen_rust_project_lib",
        "//tools/rust_analyzer/3rdparty/crates:anyhow",
        "//tools/rust_analyzer/3rdparty/crates:camino",
        "//tools/rust_analyzer/3rdparty/crates:clap",
        "//tools/rust_analyzer/3rdparty/crates:env_logger",
        "//tools/rust_analyzer/3rdparty/crates:log",
        "//tools/rust_analyzer/3rdparty/crates:serde_json",
    ],
)

rust_binary(
    name = "gen_rust_project",
    srcs = ["bin/gen_rust_project.rs"],
    edition = "2018",
    rustc_env = {
        "ASPECT_REPOSITORY": aspect_repository(),
    },
    visibility = ["//visibility:public"],
    deps = [
        ":gen_rust_project_lib",
        "//tools/rust_analyzer/3rdparty/crates:anyhow",
        "//tools/rust_analyzer/3rdparty/crates:camino",
        "//tools/rust_analyzer/3rdparty/crates:clap",
        "//tools/rust_analyzer/3rdparty/crates:env_logger",
        "//tools/rust_analyzer/3rdparty/crates:log",
        "//tools/rust_analyzer/3rdparty/crates:serde_json",
    ],
)

rust_binary(
    name = "validate",
    srcs = ["bin/validate.rs"],
    data = [
        "//rust/toolchain:current_rust_analyzer_toolchain",
    ],
    edition = "2021",
    rustc_env = {
        "RUST_ANALYZER_RLOCATIONPATH": "$(RUST_ANALYZER_RLOCATIONPATH)",
    },
    toolchains = ["//rust/toolchain:current_rust_analyzer_toolchain"],
    visibility = ["//visibility:public"],
    deps = [
        "//rust/runfiles",
        "//tools/rust_analyzer/3rdparty/crates:clap",
        "//tools/rust_analyzer/3rdparty/crates:env_logger",
        "//tools/rust_analyzer/3rdparty/crates:log",
    ],
)

# On-save flycheck wrapper. The assembled rust-project.json wires its
# `flycheck` runnable to `bazel run` this target with `{label}` and
# `{saved_file}` after rust-analyzer substitutes them. It runs
# `bazel build` with rustc diagnostics enabled, harvests the resulting
# `.rustc-output` files via BEP, and streams rustc JSON to stdout for
# rust-analyzer to render as inline squiggles.
rust_binary(
    name = "flycheck",
    srcs = ["bin/flycheck.rs"],
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        ":gen_rust_project_lib",
        "//tools/rust_analyzer/3rdparty/crates:anyhow",
        "//tools/rust_analyzer/3rdparty/crates:camino",
        "//tools/rust_analyzer/3rdparty/crates:clap",
        "//tools/rust_analyzer/3rdparty/crates:env_logger",
        "//tools/rust_analyzer/3rdparty/crates:log",
        "//tools/rust_analyzer/3rdparty/crates:serde_json",
    ],
)

rust_test(
    name = "flycheck_test",
    crate = ":flycheck",
)

# Opt-mode re-exposures of the two source binaries setup copies into
# the user's launcher dir. discover/flycheck run on every save /
# discovery and pay the fastbuild→opt gap repeatedly; forcing `-c opt`
# here means setup always installs the fastest available build,
# independent of the parent build's `--compilation_mode`.
opt_executable(
    name = "discover_bazel_rust_project_opt",
    src = ":discover_bazel_rust_project",
    visibility = ["//visibility:private"],
)

opt_executable(
    name = "flycheck_opt",
    src = ":flycheck",
    visibility = ["//visibility:private"],
)

# One-command bootstrap that wires VSCode, Neovim, Helix, or any other
# rust-analyzer-capable editor at the Bazel rust-analyzer toolchain. Copies
# the discover/flycheck binaries to editor-appropriate locations and
# (where the editor's config format is mergeable JSON) writes/merges the
# relevant settings. Re-runnable; preserves user keys.
#
# Invoke with a subcommand per IDE: `vscode`, `neovim`, `helix`, `print`.
rust_binary(
    name = "setup",
    srcs = ["bin/setup.rs"],
    # setup resolves these via runfiles at install time:
    #   * The three toolchain binaries get baked as absolute
    #     `output_base/external/...` paths into the editor's
    #     rust-analyzer settings (they survive `bazel clean`; only
    #     `--expunge` invalidates them).
    #   * The two source binaries (discover, flycheck) get copied into
    #     the launcher dir so the editor's commands stay valid across
    #     `bazel clean`. The binaries self-locate their config from
    #     `current_exe()` — no launcher scripts. The toolchain-info
    #     JSON used to be copied here too; it's now embedded into
    #     `gen_rust_project_lib` at compile time via `include_str!`.
    data = [
        ":discover_bazel_rust_project_opt",
        ":flycheck_opt",
        "//rust/toolchain:current_rust_analyzer_toolchain",
        "//rust/toolchain:current_rustfmt_toolchain",
    ],
    edition = "2021",
    rustc_env = {
        "RUSTFMT_RLOCATIONPATH": "$(RUSTFMT_RLOCATIONPATH)",
        "RUST_ANALYZER_PROC_MACRO_SRV_RLOCATIONPATH": "$(RUST_ANALYZER_PROC_MACRO_SRV_RLOCATIONPATH)",
        "RUST_ANALYZER_RLOCATIONPATH": "$(RUST_ANALYZER_RLOCATIONPATH)",
    },
    toolchains = [
        "//rust/toolchain:current_rust_analyzer_toolchain",
        "//rust/toolchain:current_rustfmt_toolchain",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Source of truth for the on-disk filenames setup copies into
        # the launcher dir (`{DISCOVER,FLYCHECK}_BINARY_FILENAME`).
        # Sharing them keeps the install side and the consumer side
        # (rust_project.rs's flycheck-runnable path emitter) in sync.
        ":gen_rust_project_lib",
        "//rust/runfiles",
        "//tools/rust_analyzer/3rdparty/crates:anyhow",
        "//tools/rust_analyzer/3rdparty/crates:camino",
        "//tools/rust_analyzer/3rdparty/crates:clap",
        "//tools/rust_analyzer/3rdparty/crates:env_logger",
        "//tools/rust_analyzer/3rdparty/crates:log",
        "//tools/rust_analyzer/3rdparty/crates:serde_json",
    ],
)

rust_test(
    name = "setup_test",
    crate = ":setup",
)

# Pairs with the `compile_data` entry below: the env_file emits
# `RUST_ANALYZER_TOOLCHAIN_JSON=<src.path>` through a `map_each`
# callback so Bazel's path mapping rewrites the path before the action
# runs. `process_wrapper` reads the env file and sets the env var, then
# lib.rs's `include_str!(env!("RUST_ANALYZER_TOOLCHAIN_JSON"))` opens
# the same path-mapped JSON sibling. Going through `rustc_env =`
# directly would bake the analysis-time path that path mapping never
# rewrites — the compile-time read then fails to find the file under
# `--experimental_output_paths=strip`.
env_file(
    name = "toolchain_info_env",
    src = "//rust/private:rust_analyzer_detect_sysroot",
    key = "RUST_ANALYZER_TOOLCHAIN_JSON",
)

rust_library(
    name = "gen_rust_project_lib",
    srcs = glob(
        ["**/*.rs"],
        exclude = ["bin"],
    ),
    # The JSON file itself must be available to rustc — `:toolchain_info_env`
    # only emits the env-var wrapper pointing at this path.
    compile_data = [
        "//rust/private:rust_analyzer_detect_sysroot",
    ],
    edition = "2018",
    rustc_env_files = [
        ":toolchain_info_env",
    ],
    deps = [
        "//rust/runfiles",
        "//tools/rust_analyzer/3rdparty/crates:anyhow",
        "//tools/rust_analyzer/3rdparty/crates:camino",
        "//tools/rust_analyzer/3rdparty/crates:clap",
        "//tools/rust_analyzer/3rdparty/crates:log",
        "//tools/rust_analyzer/3rdparty/crates:serde",
        "//tools/rust_analyzer/3rdparty/crates:serde_json",
    ],
)

rust_test(
    name = "gen_rust_project_lib_test",
    crate = ":gen_rust_project_lib",
    deps = [
        "//tools/rust_analyzer/3rdparty/crates:itertools",
    ],
)

rust_clippy(
    name = "gen_rust_project_clippy",
    testonly = True,
    visibility = ["//visibility:private"],
    deps = [
        ":gen_rust_project",
    ],
)

bzl_library(
    name = "bzl_lib",
    srcs = [],
    visibility = ["//visibility:public"],
    deps = ["//tools/rust_analyzer/3rdparty:bzl_lib"],
)
