load("//rust/private:rust.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "rustdoc_test_runner",
    srcs = ["rustdoc_test_runner.rs"],
    edition = "2018",
    deps = [
        "//rust/runfiles",
    ],
)

rust_binary(
    name = "rustdoc_test_writer",
    srcs = ["rustdoc_test_writer.rs"],
    edition = "2018",
    deps = [
        "//rust/runfiles",
    ],
)

rust_binary(
    name = "rustdoc_compile_wrapper",
    srcs = ["rustdoc_compile_wrapper.rs"],
    edition = "2018",
)
