load(
    "cc_args_and_env_test.bzl",
    "bindir_absolute_test",
    "bindir_relative_test",
    "direct_libs_absolute_test",
    "direct_libs_relative_test",
    "fsanitize_ignorelist_absolute_test",
    "fsanitize_ignorelist_relative_test",
    "include_absolute_test",
    "include_mixed_test",
    "include_relative_test",
    "isystem_absolute_test",
    "isystem_relative_test",
    "legacy_cc_toolchain_test",
    "libpath_absolute_test",
    "libpath_relative_test",
    "resource_dir_absolute_test",
    "resource_dir_relative_test",
    "sysroot_absolute_test",
    "sysroot_bazel_placeholder_test",
    "sysroot_next_absolute_test",
    "sysroot_relative_test",
    "xclang_isystem_absolute_test",
    "xclang_isystem_relative_test",
)

sysroot_relative_test(name = "sysroot_relative_test")

sysroot_absolute_test(name = "sysroot_absolute_test")

sysroot_next_absolute_test(name = "sysroot_next_absolute_test")

sysroot_bazel_placeholder_test(name = "sysroot_bazel_placeholder_test")

isystem_relative_test(name = "isystem_relative_test")

isystem_absolute_test(name = "isystem_absolute_test")

xclang_isystem_relative_test(name = "xclang_isystem_relative_test")

xclang_isystem_absolute_test(name = "xclang_isystem_absolute_test")

bindir_relative_test(name = "bindir_relative_test")

bindir_absolute_test(name = "bindir_absolute_test")

fsanitize_ignorelist_absolute_test(name = "fsanitize_ignorelist_absolute_test")

fsanitize_ignorelist_relative_test(name = "fsanitize_ignorelist_relative_test")

legacy_cc_toolchain_test(name = "legacy_cc_toolchain_test")

libpath_absolute_test(name = "libpath_absolute_test")

libpath_relative_test(name = "libpath_relative_test")

resource_dir_absolute_test(name = "resource_dir_absolute_test")

resource_dir_relative_test(name = "resource_dir_relative_test")

include_relative_test(name = "include_relative_test")

include_absolute_test(name = "include_absolute_test")

include_mixed_test(name = "include_mixed_test")

direct_libs_relative_test(name = "direct_libs_relative_test")

direct_libs_absolute_test(name = "direct_libs_absolute_test")
