load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")
load(":rust_cxx_bridge.bzl", "rust_cxx_bridge")

rust_binary(
    name = "demo",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = [
        ":blobstore-sys",
        ":bridge",
        "@ext_annotations//:cxx",
    ],
)

rust_cxx_bridge(
    name = "bridge",
    src = "src/main.rs",
    deps = [":blobstore-include"],
)

cc_library(
    name = "blobstore-sys",
    srcs = ["src/blobstore.cc"],
    copts = ["-std=c++17"],
    linkstatic = True,
    deps = [
        ":blobstore-include",
        ":bridge/include",
    ],
)

cc_library(
    name = "blobstore-include",
    hdrs = ["include/blobstore.h"],
    copts = ["-std=c++17"],
    deps = ["@ext_annotations//:cxx_cc"],
)

rust_test(
    name = "unit_test",
    crate = ":demo",
)
